RG-1722: Fixed. Select list items are badly aligned

--- a/components/list/list.css
+++ b/components/list/list.css
@@ -88,6 +88,7 @@
 
 .label {
   overflow: hidden;
+  flex-grow: 1;
   flex-shrink: 1;
 
   text-align: left;
